--- a/06_Матанализ/ДЗ_04/HW_04.ipynb
+++ b/06_Матанализ/ДЗ_04/HW_04.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "т.к. $\\arcsin (x)=\\frac{1}{\\sqrt{1- (x)^{2}}}$"
+    "т.к. $\\arcsin (x)^{\\prime}=\\frac{1}{\\sqrt{1- (x)^{2}}}$"
    ]
   },
   {
